# VWisper

./: .gitignore  README.md  index.html  package.json  tailwind.config.cjs  vite.config.ts
public/: CHANGELOG.md
scripts/: create_dmg.sh
src/: App.css  App.tsx  Settings.tsx  dashboard.html  index.css  main.tsx  settings.html  settings.tsx  splashscreen.html  wave-window.html  wave-window.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  mod.rs  update.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/audio/: devices.rs  mod.rs  processor.rs  recorder.rs  sound.rs
src-tauri/src/modules/core/: mod.rs  state.rs  text_injection.rs
src-tauri/src/modules/settings/: config.rs  mod.rs
src-tauri/src/modules/storage/: analytics.rs  history.rs  mod.rs  usage_stats.rs
src-tauri/src/modules/ui/: commands.rs  history_commands.rs  mod.rs  tray.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: Dashboard.tsx  Settings.tsx  Splashscreen.tsx  WaveWindow.css  WaveWindow.tsx
src/components/Analytics/: Cards.tsx  Chart.tsx
src/components/Header/: Header.tsx
src/components/History/: Table.tsx
src/components/Onboarding/: Onboarding.tsx
src/components/Settings/: Settings.tsx
src/components/Sidebar/: Logo.tsx  Sidebar.tsx
src/components/Utils/: Nav.tsx  Theme.tsx
src/components/dashboard/: Analytics.tsx  Changelog.tsx  History.tsx  Onboarding.tsx  Playground.tsx  Settings.tsx
src/components/ui/: chart.tsx  sidebar.tsx
src/hooks/: use-update.ts
